@@ -1,3 +1,8 @@
+2006-04-06  Jan Hubicka  <jh@suse.cz>
+
+	PR profile/26399
+	* g++.dg/bprob/g++-bprob-2.C: New testcase.
+
 2006-08-17  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c/28744
