@@ -1,3 +1,10 @@
+2006-04-06  Jan Hubicka  <jh@suse.cz>
+
+	PR profile/20815
+	PR profile/26399
+	* coverage.c (coverage_checksum_string): Reorganize loop to not read
+	after buffer.
+
 2006-08-17  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c/28744
